# home-for-ai

./: .dockerignore  .gitignore  .gitleaksignore  .pre-commit-config.yaml  AGENTS.md  CSA_SANDBOX_APPLICATION.md  Cargo.toml  Dockerfile  GOVERNANCE.md  LEGAL.md  Makefile  PROJECT_STRUCTURE.md  README.md  index.html  package-lock.json  package.json  server.ts  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.ts
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: apply-security-cleanup.yml  ci-python.yml  ci.yml  release.yml  runtime-taste-audit.yml  site-marketing-mcp.yml  stale.yml
architecture/: backend-bridge.md
backend/: .env.example  README.md  main.py  raven_runtime.py  requirements-blockchain.txt  requirements.txt
backend/agents/: __init__.py  agent_registry.py  base_agent.py  exceptions.py  skill_engine.py  trading_agent.py
backend/api/: __init__.py  websocket_manager.py
backend/api/routes/: __init__.py  agents.py  auth.py  blockchain.py  chat.py  copy_trade.py  market.py  portfolio.py  raven.py  settings.py  transfer.py
backend/blockchain/: __init__.py  chains.py  converter.py  eip4337.py  nft.py  wallet_manager.py
backend/db/: __init__.py  database.py  models.py
backend/markets/: __init__.py  copy_trade_engine.py  data_fetcher.py  news_fetcher.py  portfolio_manager.py
backend/models/: __init__.py  decision_engine.py  fusion_llm.py  market_analyzer.py
backend/raven/: __init__.py  run_records.py
backend/security/: __init__.py  auth.py  encryption.py  input_validator.py  rate_limiter.py
backend/tests/: __init__.py  test_agents.py  test_api.py  test_fusion_llm.py  test_portfolio.py  test_raven_run_records.py
blockchain-sdk/: README.md  package.json  pyproject.toml
blockchain-sdk/docs/: CROSS_APP_PAYMENTS.md  INTEGRATION.md
blockchain-sdk/python/: __init__.py  chains.py  crypto.py  identity.py  nft.py  payments.py  wallet.py
blockchain-sdk/src/: chains.ts  crypto.ts  eip4337.ts  identity.ts  index.ts  nft.ts  payments.ts  token.ts  wallet.ts
blockchain-sdk/tests/: test_payments.ts  test_wallet.ts
build-scripts/android/: build.sh
build-scripts/common/: version.sh
build-scripts/ios/: build.sh
build-scripts/linux/: build.sh
docs/: CHANGELOG.md  LLM_MODEL_CARD.md  RAVEN_EVIDENCE_GRAPH.md  RAVEN_TOKEN_ECONOMY.md  app_store_marketing_kit.md  billion_dollar_roadmap.md  enhancement_brainstorm.md  legal_safety_assessment.md  master_fame_monetization_plan.md
docs/private/: app_store_listings.md  go_to_market_strategy.md
examples/: README.md
gateway/: Dockerfile  README.md  go.mod  main.go
gateway/agents/: heartbeat.go  hub.go
gateway/api/: routes.go
gateway/blockchain/: converter.go  eip4337.go  evm.go  multichain.go
gateway/config/: config.go
gateway/execution/: engine.go  matching.go
gateway/gateway/: orderrouter.go  proxy.go  websocket.go
gateway/markets/: feed.go  orderbook.go
gateway/middleware/: auth.go  logging.go  ratelimit.go  security.go
gateway/wallet/: crypto.go  transfer.go
integrations/site-marketing-mcp/: .env.example  README.md  package.json  tsconfig.json
integrations/site-marketing-mcp/src/: catalog.ts  server.ts
mobile/: .env.example  README.md  app.json  package.json  tsconfig.json
mobile/app/: _layout.tsx
mobile/app/(tabs)/: _layout.tsx  index.tsx  market.tsx  settings.tsx  trade.tsx  wallet.tsx
mobile/app/modal/: agent-detail.tsx  send-crypto.tsx  trade-confirm.tsx
mobile/assets/: adaptive-icon.png.txt  icon.png.txt  splash.png.txt
mobile/components/: AgentCard.tsx  CatAvatar.tsx  GlassCard.tsx  MarketTicker.tsx  OrderBook.tsx  PriceChart.tsx  SecurityBadge.tsx  SparkLine.tsx
mobile/hooks/: useAgents.ts  useMarket.ts  useWallet.ts  useWebSocket.ts
mobile/lib/: api.ts  crypto.ts  theme.ts
mobile/store/: agentStore.ts  tradeStore.ts  walletStore.ts
research/: ai-ide-hybrids.md  framework-decision.md  perplexity-architecture.md  vscode-architecture.md
scripts/: one_time_security_cleanup.py
shared/src/types/: api.ts  events.ts  index.ts  models.ts
shared/src/utils/: api.ts  storage.ts  validation.ts
src/: App.tsx  brand.test.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app.rs  chat.rs  files.rs  mod.rs  python_sidecar.rs  settings.rs  system.rs  window.rs
src-tauri/src/services/: chat.rs  files.rs  mod.rs  python.rs  settings.rs
src/styles/: App.css  index.css
ui/: .env.example  package-lock.json  package.json  tailwind.config.ts
ui/client/: index.html
ui/client/src/: App.tsx  index.css
ui/client/src/components/: ErrorBoundary.tsx  Layout.tsx  PushNotificationToast.tsx  QuickDepositModal.tsx  Sparkline.tsx  WithdrawModal.tsx
ui/client/src/contexts/: AuthContext.tsx
ui/client/src/hooks/: useConversionRates.ts
ui/client/src/lib/: queryClient.ts
ui/client/src/pages/: Auth.tsx  CeoDashboard.tsx  CeoLogin.tsx  Chat.tsx  Convert.tsx  Market.tsx  Portfolio.tsx  Settings.tsx  Trade.tsx  Wallet.tsx  Workshop.tsx
ui/server/: index.ts  routes.ts  storage.ts
ui/shared/: schema.ts
