[workspace]
resolver = "2"
members = [
    "src-tauri"
]
exclude = []

[workspace.dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = { version = "2.0", features = [] }
tauri-plugin-fs = { version = "2.0", features = [] }
tauri-plugin-dialog = { version = "2.0", features = [] }
tauri-plugin-opener = { version = "2.0", features = [] }
tauri-plugin-os = { version = "2.0", features = [] }
tauri-plugin-process = { version = "2.0", features = [] }
tauri-plugin-clipboard-manager = { version = "2.0", features = [] }
tauri-plugin-global-shortcut = { version = "2.0", features = [] }
tauri-plugin-notification = { version = "2.0", features = [] }
tauri-plugin-updater = { version = "2.0", features = [] }
tauri-plugin-http = { version = "2.0", features = [] }
tauri-plugin-store = { version = "2.0", features = [] }
tauri-plugin-log = { version = "2.0", features = [] }
tauri-plugin-positioner = { version = "2.0", features = [] }
tauri-plugin-single-instance = { version = "2.0", features = [] }
tauri-plugin-deep-link = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
url = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
base64 = "0.22"
rmp-serde = "1.0"
zeroize = "1.0"
secrecy = "0.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"

[profile.dev]
debug = true