[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "homeforai-blockchain"
version = "0.1.0"
description = "Shared blockchain identity and payment SDK for the Home for AI ecosystem"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
  "web3>=7.0",
  "eth-account>=0.13",
  "mnemonic>=0.21",
  "httpx>=0.27",
  "cryptography>=43",
]

[project.urls]
Homepage = "https://homeforai.com"
Repository = "https://github.com/barryclerjuste/homeforai-blockchain-sdk"

[tool.hatch.build.targets.wheel]
packages = ["python"]
