[package]
name = "ai-workplace-desktop"
version = "1.0.0"
description = "Home for AI Desktop Application"
authors = ["Barry Clerjuste"]
license = "MIT"
edition = "2021"
publish = false

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = { version = "2.0", features = [] }
tauri-plugin-fs = { version = "2.0", features = [] }
tauri-plugin-dialog = { version = "2.0", features = [] }
tauri-plugin-opener = { version = "2.0", features = [] }
tauri-plugin-os = { version = "2.0", features = [] }
tauri-plugin-process = { version = "2.0", features = [] }
tauri-plugin-clipboard-manager = { version = "2.0", features = [] }
tauri-plugin-global-shortcut = { version = "2.0", features = [] }
tauri-plugin-notification = { version = "2.0", features = [] }
tauri-plugin-updater = { version = "2.0", features = [] }
tauri-plugin-http = { version = "2.0", features = [] }
tauri-plugin-store = { version = "2.0", features = [] }
tauri-plugin-log = { version = "2.0", features = [] }
tauri-plugin-positioner = { version = "2.0", features = [] }
tauri-plugin-single-instance = { version = "2.0", features = [] }
tauri-plugin-deep-link = { version = "2.0", features = [] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
url = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
regex = { workspace = true }
base64 = { workspace = true }
rmp-serde = { workspace = true }
zeroize = { workspace = true }
secrecy = { workspace = true }

[features]
default = []
custom-protocol = []

[profile.dev]
debug = true

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
